# sqlite_console

./: CMakeLists.txt  FileManager.cpp  FileManager.h  README.md  main.cpp  utils.cpp  utils.h
doc/: ST_cpp_deep_uml..doc  TODO.list  sqllite_cpp.dia
managers/: ConsoleDisplayManager.cpp  ConsoleDisplayManager.h  DBManager.cpp  DBManager.h  DisplayManager.h  FileManager.cpp  FileManager.h  FileOutPutManager.cpp  FileOutPutManager.h  ParamsManager.cpp  ParamsManager.h
utils/: CLog.cpp  CLog.h
